Build intern task management CRUD API with MVC architecture

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "product-management-system-api",
+  "name": "intern-task-management-system-api",
   "version": "1.0.0",
-  "description": "Production-ready CRUD REST API for Product Management System",
+  "description": "Production-ready CRUD REST API for Intern Task Management System",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
